--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,26 @@
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/jsgrid.min.css" />
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/jsgrid-theme.min.css" />
   <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/css/jquery.inputpicker.css" />
-  <script src="%PUBLIC_URL%/Js/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/Js/jquery.min.js"></script> 
   <script type="text/javascript" src="%PUBLIC_URL%/Js/jsgrid.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/jquery.inputpicker.js"></script>
+  <script src="%PUBLIC_URL%/Js/notification/notification.js"></script>
+  <script src="%PUBLIC_URL%/Js/alasql.min.js"></script>
+  <script src="%PUBLIC_URL%/Js/xlsx.core.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/highcharts.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/exporting.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/export-data.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/accessibility.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/daterangepicker.min.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/html2canvas.js"></script>
+  <link href="%PUBLIC_URL%/css/sumoselect.css" rel="stylesheet" />
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/jquery.sumoselect.min.js"></script>
+  <link href="%PUBLIC_URL%/css/ion.rangeSlider.min.css" rel="stylesheet" />
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/ion.rangeSlider.min.js"></script>
+ 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
