--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <script type="text/javascript" src="%PUBLIC_URL%/Js/jquery.sumoselect.min.js"></script>
   <link href="%PUBLIC_URL%/css/ion.rangeSlider.min.css" rel="stylesheet" />
   <script type="text/javascript" src="%PUBLIC_URL%/Js/ion.rangeSlider.min.js"></script>
- 
+  <script src="%PUBLIC_URL%/Config.js" type="text/javascript"></script>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
