--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/highcharts.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/exporting.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script type="text/javascript" src="%PUBLIC_URL%/Js/moment.min.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/export-data.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/accessibility.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/Js/daterangepicker.min.js"></script>
